samples/_failures_safe/1761454677_ff0508_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_261baf0a.c: In function ‘main’:
./samples/SAFE/__tmp_261baf0a.c:152:12: error: missing terminating " character
  152 |     printf("Successfully read %
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_261baf0a.c:152:5: error: expected expression at end of input
  152 |     printf("Successfully read %
      |     ^~~~~~
./samples/SAFE/__tmp_261baf0a.c:152:5: error: expected declaration or statement at end of input
